--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -311,7 +311,7 @@
 @navbar-padding-vertical: ((@navbar-height - @line-height-computed) / 2) ;
 @navbar-collapse-max-height: 340px;
 @navbar-default-color: transparent;
-@navbar-default-bg: white;
+@navbar-default-bg: rgba(255, 255, 255, .9);
 @navbar-default-border: @brand-primary;
 @navbar-default-link-color: #6d6e70;
 @navbar-default-link-hover-color: #F7931D;
